--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -35,3 +35,8 @@ jobs:
           name: coverage
           path: ./htmlcov
           retention-days: 21
+      - name: Command redirection and pipeline
+        run: |
+          python sender.py | python receiver.py
+        
+      
