--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -38,5 +38,12 @@ jobs:
       - name: Command redirection and pipeline
         run: |
           python sender.py | python receiver.py
+          
+      - name: Run receive data
+        run: |
+          coverage run --branch receiver.py
+          coverage html
+          coverage report
+          coverage report
         
       
